--- a/projeto/css/styles.css
+++ b/projeto/css/styles.css
@@ -29,8 +29,23 @@ body {
     font-size:2.5rem;
 }
 
+.din{
+    margin-bottom: 0;
+}
+
 .main-login {
     margin-top: 30%;
+    border-top-right-radius: 3rem;
+    border-bottom-right-radius: 3rem;
+    margin-right: 50%;
+}
+
+.divRed{
+    background-color: #ff6f6f;
+}
+
+.p-5{
+    padding: 2.5rem!important;
 }
 
 nav{
@@ -60,7 +75,7 @@ background-color: #ffffff;
     color: red;
     padding-right: calc(var(--bs-gutter-x) * .0);
     padding-left: calc(var(--bs-gutter-x) * .0);
-    height: 2.4rem;
+    height: 3rem;
 }
 
 .fonteNumCartao{
@@ -137,11 +152,13 @@ header>h2 {
 }
 
 .setaVerde{
-   width: 10%;
+   width: 1.8rem;
    text-align: right;
+   
 }
 
 .rodapeVerde{
     color: #05c565;
-    font-size:90%;
+    font-size:91%;
+    
 }
